[gd_scene load_steps=21 format=2]

[ext_resource path="res://game/pve/World3/PVECombat.gd" type="Script" id=1]
[ext_resource path="res://public/image/world3/Section_BG.png" type="Texture" id=2]
[ext_resource path="res://public/image/world3/Button.png" type="Texture" id=3]
[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://game/interface/boss/world3/section1.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/interface/lifebar/Hit Box.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/interface/character/character1.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/interface/character/Sword.tscn" type="PackedScene" id=8]
[ext_resource path="res://public/image/world3/PVP_Title.png" type="Texture" id=9]
[ext_resource path="res://public/image/world3/menuButton.png" type="Texture" id=10]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/PVP BG.jpg-7f19383d3849c9d6a8cd95e10fb56576.stex"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 47.5658, -90.8717 ), Vector2( 580, -90.872 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 41.1866

[sub_resource type="CapsuleShape2D" id=6]
radius = 84.4353
height = 76.3243

[sub_resource type="DynamicFont" id=7]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.2, 0.337255, 0.541176, 0.862745 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 1.78174
margin_top = -1.88773
margin_right = 1281.78
margin_bottom = 718.112
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question BOX" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Question BOX"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.309804, 0.478431, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="TextureButton" parent="Question BOX"]
margin_left = 200.0
margin_top = 80.0
margin_right = 560.0
margin_bottom = 160.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Question BOX/Answer1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -20.0
margin_right = 75.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Correct"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="TextureButton" parent="Question BOX"]
margin_left = 750.0
margin_top = 80.0
margin_right = 1110.0
margin_bottom = 160.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Question BOX/Answer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wrong"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="TextureButton" parent="Question BOX"]
margin_left = 200.0
margin_top = 160.0
margin_right = 560.0
margin_bottom = 240.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Question BOX/Answer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -20.0
margin_right = 42.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Win"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="TextureButton" parent="Question BOX"]
margin_left = 750.0
margin_top = 160.0
margin_right = 1110.0
margin_bottom = 240.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Question BOX/Answer4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "lose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="RichTextLabel" parent="Question BOX"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Q1: BAlabala"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 7 )]
margin_left = 123.233
margin_top = 187.436
margin_right = 123.233
margin_bottom = 187.436
rect_scale = Vector2( 1.3, 1.2 )

[node name="Sword" parent="." instance=ExtResource( 8 )]
position = Vector2( 47.5658, -90.8717 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sword"]
anims/Move = SubResource( 4 )

[node name="Hit Box" parent="Sword" instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Sword/Hit Box" index="0"]
position = Vector2( 411.529, 413.417 )
shape = SubResource( 5 )

[node name="Boss1" parent="." instance=ExtResource( 5 )]
position = Vector2( 900.753, 216.035 )

[node name="Hit Box" parent="Boss1" instance=ExtResource( 6 )]
position = Vector2( -101.296, -103.121 )

[node name="CollisionShape2D" parent="Boss1/Hit Box" index="0"]
position = Vector2( 285.088, 383.086 )
shape = SubResource( 6 )

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.52 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -190.0
margin_right = 171.0
margin_bottom = 190.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -49.0
margin_right = 75.0
margin_bottom = 31.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup/TextureRect/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5
margin_top = -19.5
margin_right = 51.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0117647, 0.309804, 0.592157, 1 )
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 100.0
margin_right = 86.0
margin_bottom = 161.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -8.00005
margin_right = 84.0
margin_bottom = 52.9999
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PVP_Title" type="TextureRect" parent="Popup/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = -97.0
margin_right = 150.0
margin_bottom = -17.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Popup/TextureRect/PVP_Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5
margin_top = -16.0
margin_right = 69.5
margin_bottom = 16.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0117647, 0.309804, 0.478431, 1 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 82.0
margin_bottom = 84.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Question BOX/Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Question BOX/Answer3" to="." method="_win_pressed"]
[connection signal="pressed" from="Question BOX/Answer4" to="." method="_lose_pressed"]
[connection signal="area_entered" from="Sword/Hit Box" to="." method="_on_Hit_Box_area_entered"]
[connection signal="pressed" from="Popup/TextureRect/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Popup/TextureRect/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Popup/TextureRect/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_MenuButton_pressed"]

[editable path="Sword/Hit Box"]

[editable path="Boss1"]

[editable path="Boss1/Hit Box"]
